--- a/main/eat_well/package.json
+++ b/main/eat_well/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "uuid": "^8.3.2"
   }
 }
